2001-10-21  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* gnome-vfs.spec.in:  Bunch of updates, still not quite right.
	Asked for some help from the gnome-vfs hackers.

Sun Oct 21 02:52:48 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: implement create and some
	  fixes to saving vfolder doc (though of course that bit isn't
	  done yet)

Fri Oct 19 23:24:06 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: implement make/remove_directory,
	  do proper checking of schemes as a way to do "same fs" check

Thu Oct 18 20:14:02 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: Rewrite the path resolution bits,
	  rewrite the move method to be saner, but still incomplete,
	  implement open for write and sanitized things all over.

2001-10-17  jacob berkman  <jacob@ximian.com>

	* configure.in: remove gdk dependency

	* modules/file-method.c (monitor_setup): 
	(fam_callback): use GIOChannels directly rather than through
	gdk_input calls (removes an unnecessary gdk dependency)

Tue Oct 16 00:30:27 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: not all systems have the
	  d_type dirent thingie, so don't use it, implement unlink and
	  move (mostly), though changes are not yet written to disk,
	  add a bunch of fixmes and some more code to the writing functions.
	  also remove some debugging output.

2001-10-15  Laszlo Peter <laca@ireland.sun.com>

	Patch for 48545 - add prioritized versions of all async calls

	* libgnomevfs/gnome-vfs-async-ops.h,
	  libgnomevfs-pthread/gnome-vfs-async-ops.c,
	  libgnomevfs/gnome-vfs-helpers.h,
	  libgnomevfs/gnome-vfs-helpers.c:
	  added a new argument to all async operations, the job priority,
	  which comes just before the callback. Priority is an int, valid
	  range is GNOME_VFS_MIN_PRIORITY (-10) to GNOME_VFS_MAX_PRIORITY
	  (+10). Use GNOME_VFS_DEFAULT_PRIORITY (0) if you don't care.

	* libgnomevfs-pthread/gnome-vfs-job-queue.h,