@@ -1,3 +1,8 @@
+Sun Oct 21 16:14:33 2001  George Lebl <jirka@5z.com>
+
+	* modules/vfolder-desktop-method.c: implement saving of the vfolder
+	  info, and fix locations for saving per-user files.
+
 2001-10-21  Gregory Leblanc  <gleblanc@linuxweasel.com>
 
 	* gnome-vfs.spec.in:  Bunch of updates, still not quite right.
